2004-09-16    <layer@HOBART>

	* Makefile: update LISPDIR
	* configure/Makefile: update LISPDIR

2004-09-16    <dancy@CANDY2K>

	* Makefiles: Build using 7.0 pre-final.  nfs_source_files list
	updated.  configure_source_files list added.  Added srcdist
	target.

	* bug14795/bug14692: attr.cl/opennfile.cl: Using equal hash table
	instead of eq now.  Switch back to eq when the bug is fixed.

2004-03-03    <dancy@DANCYSOFT>

	* nfs.cl: version 2.1

	* Removed unused defconstants from mountd.cl

	* Use :hiper sockets for all TCP streams for best performance.

*******************************************************************************
*** version 2.0 release
*******************************************************************************

2004-02-26    <dancy@CANDY2K>

	* nfs.cl (nfsd): Report program version number in console window
	on startup.

	* Makefile: improved regular expression which extracts the version
	number.
	
2004-02-26    <layer@HOBART>

	* Makefile: copy to cobweb using scp

2004-02-20    <layer@HOBART>

	* (NEW) nightly.bat
	* Makefile:
	- LISPDIR: check for ../acl62, the default to the Program Files
	  location
	- add -batch to lisp execution
	- add `nightly' rule
	* configure/Makefile: LISPDIR: default to ../../acl70pb
	* configure/configure.lpr: make pathnames relative

2004-02-19    <Ahmon Dancy@GOBY>

	* Makefile (dists): added FORCE 

	* configure/ipaddr.cl:	Require :sock, not :socket.

2004-02-19    <dancy@DANCYSOFT>

	* Makefile: for 'dists' rule, build w/ two separate calls to make.

	* configure/configform.cl: EOL convention change to deal w/ IDE weirdness.

	* ipaddr.cl: Make address format checking more strict.  Attempt to
	require the socket module since we use that.

2004-02-19    <Ahmon Dancy@GOBY>

	* configure/Makefile:  Remove ../*.fasl before building.

	* Makefile:

	(LISPDIR): Changed to 6.2 lisp.

	(clean): Clean the configure subtree too.   Removed the real-clean
	rule. 
