@@ -1,4 +1,4 @@
-;; -*- lisp-version: "7.0.pre-final.23 [Windows] (Sep 12, 2004 14:39)"; cg: "1.54.2.11"; form: configform; -*-
+;; -*- lisp-version: "7.0 [Windows] (Oct 26, 2004 13:48)"; cg: "1.54.2.17"; form: configform; -*-
 ;;;
 ;;; Define :configform
  
@@ -140,14 +140,33 @@
                        'configform-nfs-debug-checkbox-on-change
                        :tab-control '(:tab-control :global) :title
                        "Turn on NF~S protocol debugging" :top 46 :width
-                       180)
+                       203)
         (make-instance 'check-box :font
                        (make-font-ex nil "Tahoma / ANSI" 11) :left 26
                        :name :mountd-debug-checkbox :on-change
                        'configform-mountd-debug-checkbox-on-change
                        :tab-control '(:tab-control :global) :title
-                       "Turn on ~Mount protocol debugging" :top 72
+                       "Turn on ~Mount protocol debugging" :top 71
                        :width 197)
+        (make-instance 'check-box :font
+                       (make-font-ex nil "Tahoma / ANSI" 11) :left 27
+                       :name :gc-debug-checkbox :on-change
+                       'configform-gc-debug-checkbox-on-change
+                       :tab-control '(:tab-control :global) :title
+                       "Memory management debugging" :top 96 :width
+                       196)
+        (make-instance 'combo-box :font
+                       (make-font-ex nil "Tahoma / ANSI" 11) :left 156
+                       :name :combo-box-port-mapper :on-change
+                       'configform-combo-box-port-mapper-on-change
+                       :range '(:auto :yes :no) :tab-control
+                       '(:tab-control :global) :top 137 :value :auto
+                       :width 55)
+        (make-instance 'static-text :font
+                       (make-font-ex nil "Tahoma / ANSI" 11) :left 28
+                       :name :static-text-port-mapper :tab-control
+                       '(:tab-control :global) :top 137 :value
+                       "Use system portmapper?" :width 124)
         (make-instance 'static-text :font
                        (make-font-ex nil "Tahoma / ANSI" 11) :height 31
                        :left 230 :name :static-text-1 :tab-control
@@ -347,7 +366,10 @@
                              (make-instance 'tab-info :id :global
                                             :label "Global" :widgets
                                             '(:nfs-debug-checkbox
-                                              :mountd-debug-checkbox)))
+                                              :mountd-debug-checkbox
+                                              :gc-debug-checkbox
+                                              :combo-box-port-mapper
+                                              :static-text-port-mapper)))
                        :top 9 :value :exports :width 514)
         (make-instance 'button :font
                        (make-font-ex nil "Tahoma / ANSI" 11) :left 10
