@@ -1,3 +1,14 @@
+2004-11-02    <layer@HOBART>
+
+	* Makefile: use 7.0 final
+	* nfs-common.cl: add *nfs-gc-debug*
+	* nfs.cl: move startup announcement and gc-debug stuff here
+	* nfs.nsi: bug14783: remove service with NSIS not with nfs.exe
+	* configure/Makefile: use 7.0 final
+	* configure/configform.bil: "use system portmapper" option
+	* configure/configform.cl: gc debugging
+	* configure/configure.lpr: automatic changes
+
 2004-09-16    <layer@HOBART>
 
 	* Makefile: update LISPDIR
